--- a/client/3draw.html
+++ b/client/3draw.html
@@ -26,14 +26,17 @@
                 <button id="keyBut" class="btn btn-success" style="width: 100%" type = "button">Update Key</button>
             </form>
         </div>
+        
+        <button id="calBut" class="btn btn-primary" style="width: 32%" type = "button">Calibrate</button>
 
-        <button id="magBut" class="btn btn-primary" style="width: 49%" type = "button">Stop</button>
-        <button id="stopBut" class="btn btn-primary" style="width: 49%" type = "button">Toggle Break</button>
+        <button id="magBut" class="btn btn-primary" style="width: 32%" type = "button">Stop</button>
+        <button id="stopBut" class="btn btn-primary" style="width: 32%" type = "button">Toggle Break</button>
         <button id="clearBut" class="btn btn-danger" style="width: 100%" type = "button">Clear Stuff</button>
         <div class="center">
             <input type="range" min=-5 max=5 value=1 step=1 orient=vertical id="magSlider">
         </div>
         <p id="magInt"></p>
+      <p id="calput">derp</p>
     </div>
 </template>
 
